# ZAR-Zig-Agent-Runtime

./: LICENSE  README.md  build.zig  build.zig.zon  mkdocs.yml
acp_registry/: README.md  agent.json
docs/: acp-setup.md  architecture.md  browser-auth.md  feature-coverage.md  getting-started.md  index.md  operations.md  package-publishing.md  rpc-reference.md  security-and-diagnostics.md  telegram-channel.md
python/openclaw-zig-rpc-client/: README.md  pyproject.toml
python/openclaw-zig-rpc-client/src/openclaw_zig_rpc_client/: __init__.py  __main__.py  cli.py  client.py
python/openclaw-zig-rpc-client/tests/: test_client.py
scripts/: appliance-baremetal-closure-smoke-check.ps1  appliance-control-plane-smoke-check.ps1  appliance-minimal-profile-smoke-check.ps1  appliance-restart-recovery-smoke-check.ps1  appliance-rollout-boundary-smoke-check.ps1  baremetal-i386-smoke-check.ps1  baremetal-qemu-active-task-terminate-baseline-probe-check.ps1  baremetal-qemu-active-task-terminate-failover-probe-check.ps1  baremetal-qemu-active-task-terminate-final-collapse-probe-check.ps1  baremetal-qemu-active-task-terminate-probe-check.ps1  baremetal-qemu-active-task-terminate-repeat-idempotent-probe-check.ps1  baremetal-qemu-active-task-terminate-survivor-progress-probe-check.ps1  baremetal-qemu-allocator-free-failure-bad-pointer-preserve-probe-check.ps1  baremetal-qemu-allocator-free-failure-bad-size-preserve-probe-check.ps1  baremetal-qemu-allocator-free-failure-baseline-probe-check.ps1  baremetal-qemu-allocator-free-failure-double-free-realloc-probe-check.ps1  (+732 more)
src/: config.zig  (+4 more)
(+166 files in other folders)
